# incant

./: .credentials.example.json  .gitignore  CLAUDE.md  CONTEXT.md  README.md  bench_transcribe.py  commands.json  corrections.py  history.py  installer.iss  pyproject.toml  run.bat  stt.py  synthesis.py  test_webhook.py  ui.bat  ui.py
assets/: make_logo.py
automation/: __init__.py  cli.py  command.py  commands.py  credentials.py  editor.py  engine.py  manifest.py  models.py  n8n.py  notifier.py  payload.py  router.py
automation/actions/: __init__.py  base.py  github_issue.py  save_file.py  send_email.py  type_cursor.py
docs/adr/: 0001-ai-engine-and-local-first-boundary.md  0002-pipelines-are-voice-routed-dags.md  0003-native-tkinter-node-canvas-editor.md  0004-variables-and-templated-fields.md
n8n/: .env.example  docker-compose.yml
pipelines/save-note/: manifest.json
pipelines/save-note/prompts/: compose.md
tests/: test_audio_engine.py  test_engine.py  test_segmenter.py  test_snippets.py  test_textstitch.py  test_wordstream.py
