[project]
name = "incant"
version = "0.1.0"
description = "Local-first voice transcription with automation. Speak -> text at your cursor, or spoken commands that trigger actions."
requires-python = ">=3.12,<3.13"
dependencies = [
    "faster-whisper>=1.1.0",
    "sounddevice>=0.4.7",
    "numpy>=1.26",
    "keyboard>=0.13.5",
    "customtkinter>=5.2.2",
    # CUDA 12 + cuDNN 9 runtime for CTranslate2 GPU (works on RTX 5070 Ti / Blackwell)
    "nvidia-cublas-cu12>=12.4",
    "nvidia-cudnn-cu12>=9.0",
]

[project.scripts]
stt = "stt:main"
ui = "ui:main"

[tool.uv]
# keep CUDA wheels; they are large but needed for GPU
